--- a/ForumDImage/ForumDImage/Views/Inscription/Success.cshtml
+++ b/ForumDImage/ForumDImage/Views/Inscription/Success.cshtml
@@ -6,5 +6,5 @@
 
 <h2>Bravo, tu as bien été inscrit</h2>
 <script type="text/javascript">
-setTimeout(function(){window.location.href='Login.jsp'},3000);
+setTimeout(function(){window.location.href=''},5000);
 </script>
