--- a/ForumDImage/ForumDImage/Views/ZoneClients/ModificationEffectuee.cshtml
+++ b/ForumDImage/ForumDImage/Views/ZoneClients/ModificationEffectuee.cshtml
@@ -4,5 +4,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>ModificationEffectuee</h2>
-
+<h2>Modification(s) éffectuée</h2>
+<script type="text/javascript">
+    setTimeout(function () { window.location.href = '' }, 5000);
+</script>
