--- a/ForumDImage/ForumDImage/Views/Login/Index.cshtml
+++ b/ForumDImage/ForumDImage/Views/Login/Index.cshtml
@@ -9,11 +9,11 @@
         <legend>Se connecter</legend>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.NomUtilisateur)
+            @Html.LabelFor(model => model.NomUtilisateur, new { @class = "control-label" })
             @Html.TextBoxFor(model => model.NomUtilisateur, new { @class = "form-control", placeholder = "Nom d'utilisateur" })
         </div>
         <div class="form-group">
-            @Html.LabelFor(model => model.MotDePasse)
+            @Html.LabelFor(model => model.MotDePasse, new { @class = "control-label" })
             @Html.TextBoxFor(model => model.MotDePasse, new { @class = "form-control", type = "password", placeholder = "Mot de passe"})
         </div>
         <br />
