--- a/ForumDImage/ForumDImage/Views/Inscription/Success.cshtml
+++ b/ForumDImage/ForumDImage/Views/Inscription/Success.cshtml
@@ -1,10 +1,10 @@
 ﻿
 @{
     Layout = "~/Views/Shared/_Layout.cshtml";
-
+    ViewBag.Title = "Succès";
 }
 
 <h2>Bravo, tu as bien été inscrit</h2>
 <script type="text/javascript">
-setTimeout(function(){window.location.href=''},5000);
+setTimeout(function(){window.location.href='Login'},3000);
 </script>
