--- a/ForumDImage/ForumDImage/Views/ZoneClients/ModificationEffectuee.cshtml
+++ b/ForumDImage/ForumDImage/Views/ZoneClients/ModificationEffectuee.cshtml
@@ -6,5 +6,5 @@
 
 <h2>Modification(s) éffectuée</h2>
 <script type="text/javascript">
-    setTimeout(function () { window.location.href = '' }, 5000);
+    setTimeout(function () { window.location.href = 'Index' }, 3000);
 </script>
