--- a/ForumDImage/ForumDImage/Views/ZoneClients/PublierPhoto.cshtml
+++ b/ForumDImage/ForumDImage/Views/ZoneClients/PublierPhoto.cshtml
@@ -1,6 +1,7 @@
 ﻿@{
     Layout = "~/Views/Shared/_Layout.cshtml";
     @model ForumDImage.Models.Photo
+    ViewBag.Title = "Publier Photo";
 }
 
 <script type="text/javascript">
