--- a/ForumDImage/ForumDImage/Views/Shared/_Layout.cshtml
+++ b/ForumDImage/ForumDImage/Views/Shared/_Layout.cshtml
@@ -7,7 +7,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title - My ASP.NET Application</title>
+    <title>@ViewBag.Title - Le Yung LeL</title>
     <link rel="stylesheet" type="text/css" href="MasterCSS.css" />
     @{ForumDImage.Models.Dal dal = new ForumDImage.Models.Dal();}
     <style>
@@ -26,6 +26,7 @@
             position: fixed;
             background-color: rgb(255, 255, 255);
             z-index:100;
+            border-bottom:1px solid black;
         }
 
         .mandatory {
