faut juste mettre des belles photos pour jeudi
Pat amuse toi à essayer de le faire planter pls

--- a/ForumDImage/ForumDImage/Views/ZoneClients/PublierPhoto.cshtml
+++ b/ForumDImage/ForumDImage/Views/ZoneClients/PublierPhoto.cshtml
@@ -21,6 +21,7 @@
 
 @using (Html.BeginForm("PublierPhoto", "ZoneClients", FormMethod.Post, new { enctype = "multipart/form-data" }))
 {
+    Html.ValidationSummary(false);
     <fieldset>
         <legend>Publier une Image</legend>
         <h4>Apperçu de l'image :</h4>
